[gd_scene load_steps=9 format=3 uid="uid://c56rglg4m40w"]

[ext_resource type="PackedScene" uid="uid://bgu60eus3wlk4" path="res://interface/interface.tscn" id="1_owudw"]
[ext_resource type="PackedScene" uid="uid://cuvqsabmigps8" path="res://gen_sprites/my_computer.tscn" id="2_1k6j5"]
[ext_resource type="Script" path="res://interface/health_bar/hp_counter.gd" id="2_8msvf"]
[ext_resource type="Script" path="res://gen_sprites/my_computer.gd" id="3_7du7i"]
[ext_resource type="PackedScene" uid="uid://yy4qrx6lcmxg" path="res://enemy_units/spawning_node/spawning_node.tscn" id="3_aslnr"]
[ext_resource type="PackedScene" uid="uid://c70rkrengytjx" path="res://Towers/Pointer_Tower/Pointer_Tower.tscn" id="3_ct47u"]
[ext_resource type="Script" path="res://Levels/path_spawn.gd" id="4_nfyo5"]
[ext_resource type="PackedScene" uid="uid://omnok2vrdfpb" path="res://Towers/4dArrow_Tower/4d_arrow_tower.tscn" id="7_rm550"]

[node name="Level 1" type="Node2D"]

[node name="Interface" parent="." instance=ExtResource("1_owudw")]

[node name="counter" parent="Interface/Hbar" index="0"]
script = ExtResource("2_8msvf")

[node name="counter" parent="Interface" index="1"]
offset_right = 1146.0

[node name="My Computer" parent="." instance=ExtResource("2_1k6j5")]
position = Vector2(91, 108)
script = ExtResource("3_7du7i")

[node name="spawning_node" parent="." instance=ExtResource("3_aslnr")]
script = ExtResource("4_nfyo5")

[node name="spawn_timer" type="Timer" parent="spawning_node"]
wait_time = 0.05
autostart = true

[node name="Towers" type="Node2D" parent="."]

[node name="Pointer_Tower" parent="Towers" instance=ExtResource("3_ct47u")]
position = Vector2(421, 214)

[node name="4dArrow_Tower" parent="Towers" instance=ExtResource("7_rm550")]
position = Vector2(552, 250)

[connection signal="enemy_changed" from="Interface" to="Interface/counter" method="_on_interface_enemy_changed"]
[connection signal="health_changed" from="My Computer" to="Interface" method="_on_my_computer_health_changed"]
[connection signal="area_entered" from="My Computer/Area2D" to="My Computer" method="_on_area_2d_area_entered"]
[connection signal="enemy_changed" from="spawning_node" to="Interface" method="_on_spawning_node_enemy_changed"]
[connection signal="timeout" from="spawning_node/spawn_timer" to="spawning_node" method="_on_spawn_timer_timeout"]
[connection signal="enemy_killed" from="Towers/Pointer_Tower" to="spawning_node" method="_on_pointer_tower_enemy_killed"]

[editable path="Interface"]
[editable path="Interface/Hbar"]
[editable path="Interface/Hbar/counter"]
[editable path="Interface/counter"]
[editable path="My Computer"]
[editable path="spawning_node"]
[editable path="Towers/Pointer_Tower"]
[editable path="Towers/4dArrow_Tower"]
